# ccfddl-skills

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .version-bump.json  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  package.json  pyproject.toml
.agents/plugins/: ccfddl-query.md  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.cursor/rules/: ccfddl-query.mdc
.trae/rules/: ccfddl-query.md
adapters/: README.md
antigravity/: ccfddl-query.md
ccfddl_skills/: __init__.py
examples/: README.md
rules/: ccfddl-query.mdc
scripts/: check.sh  showcase-4agents.sh
skills/ccfddl-query/: SKILL.md
skills/ccfddl-query/agents/: openai.yaml
skills/ccfddl-query/fixtures/: accept_rates.sample.yml  allconf.sample.yml
skills/ccfddl-query/references/: data-source.md  domain-mapping.md  output-schema.md
skills/ccfddl-query/scripts/: query_conferences.py  query_conferences_impl.py
tests/: run-tests.sh  test_query_conferences.py
tests/plugins/: test_manifests.py
tests/python/: test_query_conferences.py
