[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccfddl-skills"
version = "1.0.0"
description = "Agent Skills for querying ccfddl conference deadline data."
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]

[tool.setuptools]
packages = ["ccfddl_skills"]

[project.scripts]
ccfddl-query = "ccfddl_skills.query_conferences:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
  "black>=25.0",
  "tomli>=1.1; python_version < '3.11'",
]

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
